--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1360,7 +1360,7 @@ a,i, cite, em, var, address, dfn,ol,li,ul{
   content: "";
   height: 100%;
   width: 100%;
-  background: #171a2b;
+  background: #ff3c00;
   left: 0;
   top: 0;
   border-radius: 50%;
