--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1300,10 +1300,10 @@ a,i, cite, em, var, address, dfn,ol,li,ul{
   z-index: 1;
   overflow: hidden;
   margin-bottom: 30px;
-  transition: 0.5s;
+  transition: all 0.5s ease;
 }
 
-.feature-sinble-single-box::before {
+/* .feature-sinble-single-box::before {
   position: absolute;
   content: "";
   height: 100%;
@@ -1336,22 +1336,23 @@ a,i, cite, em, var, address, dfn,ol,li,ul{
 .feature-sinble-single-box:hover:after {
   transform: perspective(500px) rotateX(0deg);
   opacity: 1;
-}
+} */
 
 .feature-icon {
   width: 75px;
   height: 75px;
-  border-radius: 38px;
+  border-radius: 50%;
   background-color: rgba(255, 255, 255, 0.4);
   border: 2px solid #ffffff;
   line-height: 70px;
   margin: auto;
   position: relative;
   z-index: 1;
+  transition: all 0.5s ease;
 }
 
 .feature-icon img {
-  transition: 0.5s;
+  transition: filter 0.5s ease;
   filter: brightness(1) invert(0);
 }
 
@@ -1360,11 +1361,10 @@ a,i, cite, em, var, address, dfn,ol,li,ul{
   content: "";
   height: 100%;
   width: 100%;
-  background: #ff3c00;
+  background: transparent;
   left: 0;
   top: 0;
   border-radius: 50%;
-  transform: scale(0);
   transition: 0.5s;
 }
 
@@ -1375,7 +1375,7 @@ h3.feature-title {
   font-family: "Poppins";
   margin: 0 0 8px 0;
   padding: 6px 0 0px;
-  transition: 0.5s;
+  transition: color 0.5s ease;
   cursor: pointer;
 }
 
@@ -1386,11 +1386,25 @@ p.feature-text {
   font-weight: 400;
   font-family: "Fira Sans";
   margin: 0;
-  transition: 0.5s;
+  transition: color 0.5s ease;
 }
 
 .feature-sinble-single-box:hover {
-  border: 1px solid #ff4208;
+  background-color: #ff3c00;
+  background-image: repeating-linear-gradient(
+    45deg,
+    #ff3c00,
+    #ff3c00 10px,
+    rgba(255, 255, 255, 0.1) 10px,
+    rgba(255, 255, 255, 0.1) 20px
+  );
+  border: 1px solid #ff3c00;
+}
+
+.feature-sinble-single-box:hover .feature-icon {
+  background-color: #050a1e;
+  border: 3px solid #ffffff;
+  transition: all 0.5s ease;
 }
 
 .feature-sinble-single-box:hover .feature-icon::before {
@@ -1399,14 +1413,17 @@ p.feature-text {
 
 .feature-sinble-single-box:hover .feature-icon img {
   filter: brightness(0) invert(1);
+  transition: filter 0.5s ease;
 }
 
 .feature-sinble-single-box:hover h3.feature-title {
   color: #fff;
+  transition: color 0.5s ease;
 }
 
 .feature-sinble-single-box:hover p.feature-text {
   color: #fff;
+  transition: color 0.5s ease;
 }
 
 /*=====================================
@@ -2280,7 +2297,7 @@ p.service-text {
     25% 170%,
     -20% 50%
   );
-  background-color: #ff3c00;
+  background: #ff3c00;
 }
 
 .service-single-box:hover .service-icon img {
@@ -2370,6 +2387,8 @@ p.service-text {
 
 .project-thumb img {
   width: 100%;
+  height: 350px;
+  object-fit: cover;
   border-radius: 20px 20px 0 0;
   display: block;
 }
