--- a/src/assets/responsive.css
+++ b/src/assets/responsive.css
@@ -4576,6 +4576,34 @@ h3.blog-details-title.two {
   .hero-next {
     right: 15px;
   }
+
+  .hero-area {
+    padding-top: 100px;
+  }
+
+  .hero-contant {
+    padding-right: 60px;
+    padding-left: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    min-height: 400px;
+  }
+
+  .hero-contant h5 {
+    display: none;
+  }
+
+  .hero-contant h1 {
+    font-size: 28px;
+    line-height: 1.3;
+    margin-bottom: 15px;
+  }
+
+  .hero-contant p {
+    font-size: 14px;
+    line-height: 1.6;
+  }
 }
 
 @media screen and (max-width: 480px) {
@@ -4591,5 +4619,33 @@ h3.blog-details-title.two {
 
   .hero-next {
     right: 10px;
+  }
+
+  .hero-area {
+    padding-top: 80px;
+  }
+
+  .hero-contant {
+    padding-right: 50px;
+    padding-left: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    min-height: 350px;
+  }
+
+  .hero-contant h5 {
+    display: none;
+  }
+
+  .hero-contant h1 {
+    font-size: 24px;
+    line-height: 1.2;
+    margin-bottom: 12px;
+  }
+
+  .hero-contant p {
+    font-size: 13px;
+    line-height: 1.5;
   }
 }
