--- a/src/assets/responsive.css
+++ b/src/assets/responsive.css
@@ -6,7 +6,7 @@
 }
 
 .hero-area {
-    height: 680px;
+    height: 600px;
 }
 
 .hero-thumb {
@@ -128,7 +128,7 @@
 }
 
 .hero-area {
-    height: 800px;
+    height: 600px;
     margin: 0;
 }
 
@@ -447,7 +447,7 @@ h4.blog-details-title {
 }
 
 .hero-area {
-    height: 800px;
+    height: 600px;
     margin: 0;
 }
 
@@ -476,7 +476,7 @@ h3.service-title {
 }
 
 .feature-box {
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(5, 1fr);
 }
 
 .feature-sinble-single-box {
@@ -4556,6 +4556,18 @@ h3.blog-details-title.two {
         height: inherit;
     }
   }
+
+/* Laptop responsive - 1200px and above */
+@media screen and (min-width: 1200px) {
+  .feature-box {
+    grid-template-columns: repeat(5, 1fr);
+    gap: 25px;
+  }
+
+  .feature-sinble-single-box {
+    margin-bottom: 0;
+  }
+}
 
 
 
