added high quality image for the phone

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1146,7 +1146,7 @@ a,i, cite, em, var, address, dfn,ol,li,ul{
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  background-attachment: fixed;
+  background-attachment: scroll;
   margin: 0;
   overflow: hidden;
   position: relative;
