--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1152,11 +1152,7 @@ a,i, cite, em, var, address, dfn,ol,li,ul{
   position: relative;
   z-index: 1;
   transition: background-image 0.8s ease-in-out;
-  width: 100vw;
-  left: 50%;
-  right: 50%;
-  margin-left: -50vw;
-  margin-right: -50vw;
+  width: 100%;
 }
 
 .hero-carousel-btn {
