--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1334,7 +1334,7 @@ a,i, cite, em, var, address, dfn,ol,li,ul{
 
 .feature-area {
   padding: 0 0 40px;
-  margin-top: -60px;
+  margin-top: 80px;
 }
 
 .feature-box {
@@ -5599,7 +5599,7 @@ ul.list-style-one li a:hover {
   <!-- start TAKESOLUTION about section -->
 =========================================================---*/
 .about-section {
-  padding: 0px 0 125px;
+  padding: 0px 0 200px;
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -9133,5 +9133,65 @@ z-index: 999;
 .menu-filtering li.active{
   background-color: #ff3b00;
   color: #fff;
+}
+
+
+
+/* About3 Grid Layout for 4 Images - Diamond Pattern */
+.about-thumb-grid {
+  position: relative;
+  width: 100%;
+  max-width: 600px;
+  aspect-ratio: 1;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.grid-item {
+  position: absolute;
+  width: 35%;
+  aspect-ratio: 1;
+  border-radius: 20px;
+  overflow: hidden;
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.grid-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.grid-top {
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%) rotate(45deg);
+  margin-top: 6%;
+}
+
+.grid-left {
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%) rotate(45deg);
+  margin-left: 6%;
+}
+
+.grid-right {
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%) rotate(45deg);
+  margin-right: 6%;
+}
+
+.grid-bottom {
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%) rotate(45deg);
+  margin-bottom: 6%;
 }
 
