--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1354,6 +1354,7 @@ a,i, cite, em, var, address, dfn,ol,li,ul{
 .feature-area {
   padding: 0 0 40px;
   margin-top: -60px;
+  margin-bottom: 100px;
 }
 
 .feature-box {
