--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3537,6 +3537,17 @@ ul.testi-rating li {
   padding: 118px 0 101px;
 }
 
+.footer-logo {
+  max-width: 150px;
+  margin-bottom: 20px;
+}
+
+.footer-logo img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
 p.footer-widget-text {
   opacity: 0.6;
   font-size: 16px;
