added border raduis to the faq image

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2762,6 +2762,10 @@ ul.pricing-list li i {
   z-index: 1;
 }
 
+.faq-thumb img {
+  border-radius: 20px;
+}
+
 .faq-shape {
   position: absolute;
   top: 0;
@@ -6038,6 +6042,10 @@ ul.list-style-one li a:hover {
 .faq-area.style-two .faq-thumb {
   position: relative;
   right: -54px;
+}
+
+.faq-area.style-two .faq-thumb img {
+  border-radius: 20px;
 }
 
 .faq-area.style-two .accordion li a {
