--- a/src/Components/Services/Services1.css
+++ b/src/Components/Services/Services1.css
@@ -179,6 +179,9 @@
     box-shadow: 0 0 0 15px rgba(255, 255, 255, 0.9),
                 0 8px 32px rgba(0, 0, 0, 0.2);
     z-index: 10;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .center-circle1 {
@@ -193,6 +196,15 @@
     box-shadow: 0 0 0 15px rgba(255, 255, 255, 0.9),
                 0 8px 32px rgba(0, 0, 0, 0.2);
     z-index: 10;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.circle-logo {
+    width: 70%;
+    height: 70%;
+    object-fit: contain;
 }
 
 /* Responsive Design */
@@ -284,13 +296,13 @@
     }
 
     .center-circle {
-        width: 60px;
-        height: 60px;
+        width: 63px;
+        height: 63px;
         margin: -40px auto;
     }
     .center-circle1{
-        width: 60px;
-        height: 60px;
+        width: 63px;
+        height: 63px;
         margin: -40px auto;
     }
 
